# colab-os-app

./: DEPLOY.md  LICENSE  README.md  colabos-pro-README.md  config-with-gates.js  data.js  get.html  index.html  login.html  pages-admin.js  pages-apps.js  pages-reports.js  pages-sales.js  pages-workflows.js
js/: app.js  pages-finance.js  pages-projects.js  pages-workflows.js  plugin-sdk.js  services.js  supabase.js
js domain/: empty-states.js  finance.service.js  validate.js
js/js domain/: crm.service.js  modals.js  projects.service.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src-tauri src/: main.rs
