[package]
name = "colab-os"
version = "11.0.0"
description = "CoLAB OS — Business Operating System"
authors = ["CoLAB"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [
  "shell-open",
  "fs-all",
  "dialog-all",
  "http-all",
  "notification-all"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
